<resources>
    <string name="app_name">Le code morse</string>
    <string name="alpha">CARACTERE ALPHA</string>
    <string name="morse">CODE MORSE</string>
    <string name="espace">ESPACE</string>
    <string name="barre">/</string>
    <string name="effacer">EFFACER</string>
    <string name="jouer">JOUER</string>
    <string name="point">.</string>
    <string name="tire">-</string>
    <string name="textview">Ecrire une phrase ou un code morse</string>
    <string name="backendBy">Backend par/Backend by</string>
    <string name="entre">Entre :</string>
    <string name="sortir">Sortir :</string>
    <string name="backend_by">Backend By</string>
    <string name="traduire_le_morse">Traduire le morse</string>
    <string name="traduire_le_alpha">Traduire l\'alpha</string>
</resources>
